--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
-    font-family: "Source Code Pro";
-    font-size: 15px;
+    font-family: "Fira Code";
+    font-size: 14px;
 }
 
 window#waybar {
